--- a/index.html
+++ b/index.html
@@ -22,5 +22,22 @@
             </div>
         </div>
     </div>
+    <!-- ************************ -->
+     <div class="Home">
+        <div class="home_main">
+            <div class="home1">
+                <div class="home1_col1">
+                    <img style="max-width: 100px; max-height: 50px;" src="./images/bar.png" src="./images/bar.png">
+                </div>
+                <div class="home1_col1">
+                    <h4>01</h4>
+                    <h4>02</h4>
+                    <h4>03</h4>
+                </div>
+                <!-- ***************** -->
+            </div>
+            <div class="home2"></div>
+        </div>
+     </div>
 </body>
 </html>
